# UnrealObject2RustBuilder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run_copy.bat
BaseTypes/: def.h
Binders/: Const.json  FSphere.h  FSphere.json  FVector.json  binder.cpp  binder_template.tmp  build.rs  header.h  wrapper.h  wrapper.rs
Binders/cpp/: Binder.cpp  Binder.h  Registers.h
Binders/rs/: binders.rs  enums.rs
configs/: CustomSettings.json
engine_code/: Actor.h  Actor.h_trip
engine_source/: AABB.h  AVEncoderMicrosoftCommon.h  Actor.h  ActorDescContainer.h  ActorDescList.h  AnimCurveTypes.h  AnimDataModel.h  AnimInstance.h  AnimInstanceProxy.h  AnimSequence.h  AnimSequenceBase.h  AnimSequenceHelpers.h  AssetData.h  AssetRegistry.h  AudioDevice.h  AudioMixerDevice.h  AudioMixerSubmixEffectDynamicsProcessor.h  ChaosDebugDraw.h  ChaosEngineInterface.h  ChaosMarshallingManager.h  ChaosResultsManager.h  ChaosSolverActor.h  ClothingMeshUtils.h  CollisionConvexMesh.h  CollisionResolution.h  Convex.h  ConvexStructureData.h  Core.h  D3D12Adapter.h  D3D12CommandContext.h  D3D12CommandList.h  D3D12Device.h  D3D12PipelineState.h  D3D12RHICommon.h  D3D12RHIPrivate.h  D3D12Resources.h  D3D12Stats.h  D3D12View.h  DebugDrawQueue.h  DecoderInputFactory.h  (+155 more)
src/: api.rs  cross_types.rs  main.rs  object.rs  object_parser.rs  parser.rs
src/deprecated/: clang_rs.rs  const_parser.rs  cross_types.rs  enum_parser.rs  property.rs
src/engine_parser/: ast.rs  bindgen.rs  class_parser.rs  config.rs  enum.rs  mod.rs  unreal_engine.rs
unreal_ast/: Actor.json
